--- a/PM10분포.ipynb
+++ b/PM10분포.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "6addd0e0-3631-41cf-b664-fe5dab7bdce1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,13 @@
     "from matplotlib.colors import TwoSlopeNorm\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "from scipy.signal import butter, filtfilt,firwin\n",
+    "from scipy.signal import butter, filtfilt\n",
+    "import os\n",
+    "import seaborn as sns\n",
+    "import cmocean\n",
+    "import matplotlib.colors as mcolors\n",
+    "from scipy.stats import genextreme  \n",
+    "import matplotlib.patches as mpatches\n",
     "import matplotlib.ticker as mticker\n",
     "# matplotlib에 한글 폰트 설정\n",
     "rcParams[\"font.family\"] = \"Malgun Gothic\"  # 윈도우용, 맥/리눅스는 밑 참고\n",
@@ -122,111 +128,24 @@
        "      <td>8.0</td>\n",
        "      <td>0.649468</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827619</th>\n",
-       "      <td>633122</td>\n",
-       "      <td>충북 충주시 호암동</td>\n",
-       "      <td>도시대기</td>\n",
-       "      <td>36.96457</td>\n",
-       "      <td>127.92616</td>\n",
-       "      <td>2025-04-27</td>\n",
-       "      <td>19.583333</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.965007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827620</th>\n",
-       "      <td>633122</td>\n",
-       "      <td>충북 충주시 호암동</td>\n",
-       "      <td>도시대기</td>\n",
-       "      <td>36.96457</td>\n",
-       "      <td>127.92616</td>\n",
-       "      <td>2025-04-28</td>\n",
-       "      <td>33.000000</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.911357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827621</th>\n",
-       "      <td>633122</td>\n",
-       "      <td>충북 충주시 호암동</td>\n",
-       "      <td>도시대기</td>\n",
-       "      <td>36.96457</td>\n",
-       "      <td>127.92616</td>\n",
-       "      <td>2025-04-29</td>\n",
-       "      <td>36.285714</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.011102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827622</th>\n",
-       "      <td>633122</td>\n",
-       "      <td>충북 충주시 호암동</td>\n",
-       "      <td>도시대기</td>\n",
-       "      <td>36.96457</td>\n",
-       "      <td>127.92616</td>\n",
-       "      <td>2025-04-30</td>\n",
-       "      <td>37.458333</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.247491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1827623</th>\n",
-       "      <td>633122</td>\n",
-       "      <td>충북 충주시 호암동</td>\n",
-       "      <td>도시대기</td>\n",
-       "      <td>36.96457</td>\n",
-       "      <td>127.92616</td>\n",
-       "      <td>2025-05-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.365578</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1827624 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             지점         지점명     망        위도         경도         일시  \\\n",
-       "0        632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-01   \n",
-       "1        632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-02   \n",
-       "2        632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-03   \n",
-       "3        632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-04   \n",
-       "4        632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-05   \n",
-       "...         ...         ...   ...       ...        ...        ...   \n",
-       "1827619  633122  충북 충주시 호암동  도시대기  36.96457  127.92616 2025-04-27   \n",
-       "1827620  633122  충북 충주시 호암동  도시대기  36.96457  127.92616 2025-04-28   \n",
-       "1827621  633122  충북 충주시 호암동  도시대기  36.96457  127.92616 2025-04-29   \n",
-       "1827622  633122  충북 충주시 호암동  도시대기  36.96457  127.92616 2025-04-30   \n",
-       "1827623  633122  충북 충주시 호암동  도시대기  36.96457  127.92616 2025-05-01   \n",
+       "       지점         지점명     망        위도         경도         일시  일 미세먼지 농도(㎍/㎥)  \\\n",
+       "0  632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-01       37.130435   \n",
+       "1  632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-02       37.250000   \n",
+       "2  632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-03       38.416667   \n",
+       "3  632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-04       37.583333   \n",
+       "4  632132  강원 강릉시 옥천동  도시대기  37.76003  128.90297 2002-01-05             NaN   \n",
        "\n",
-       "         일 미세먼지 농도(㎍/㎥)  phase  Amplitude  \n",
-       "0             37.130435    7.0   1.585350  \n",
-       "1             37.250000    7.0   1.402310  \n",
-       "2             38.416667    7.0   1.296010  \n",
-       "3             37.583333    8.0   1.009710  \n",
-       "4                   NaN    8.0   0.649468  \n",
-       "...                 ...    ...        ...  \n",
-       "1827619       19.583333    7.0   0.965007  \n",
-       "1827620       33.000000    7.0   0.911357  \n",
-       "1827621       36.285714    7.0   1.011102  \n",
-       "1827622       37.458333    8.0   1.247491  \n",
-       "1827623             NaN    8.0   1.365578  \n",
-       "\n",
-       "[1827624 rows x 9 columns]"
+       "   phase  Amplitude  \n",
+       "0    7.0   1.585350  \n",
+       "1    7.0   1.402310  \n",
+       "2    7.0   1.296010  \n",
+       "3    8.0   1.009710  \n",
+       "4    8.0   0.649468  "
       ]
      },
      "execution_count": 2,
@@ -237,7 +156,7 @@
    "source": [
     "df = pd.read_csv(\"에어코리아보간전.csv\", parse_dates=[\"일시\"], encoding='utf-8')\n",
     "df = df.sort_values([\"지점명\",\"일시\"]).reset_index(drop=True)\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -282,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "44cf127c-e444-456a-83d9-2b01717e50a3",
    "metadata": {},
    "outputs": [
@@ -323,7 +242,7 @@
     "plt.gca().xaxis.set_major_locator(mticker.MaxNLocator(integer=True))\n",
     "tick_years = np.arange(2002, 2026, 2)\n",
     "plt.xticks(ticks=tick_years)\n",
-    " # 그리드 추가\n",
+    "\n",
     "plt.grid(True, linestyle='--', alpha=0.6)\n",
     "plt.xlim(2002, 2025)\n",
     "\n",
@@ -336,10 +255,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d0f11bdf-4d7b-4ae8-81bc-b79231d2d5f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] 원시 데이터 범위: 2002-01-01 00:00:00 ~ 2025-04-30 00:00:00, 1,746,834 행\n",
+      "[INFO] 일별 평균 전체 데이터: 2002-01-01 00:00:00 ~ 2025-04-30 00:00:00, 8,521 일\n",
+      "[INFO] 분석용 일별 평균 데이터: 2003-01-01 00:00:00 ~ 2024-12-31 00:00:00, 8,036 일\n",
+      "\n",
+      "===== DJF =====\n",
+      "[INFO] DJF 전체 일수: 1986\n",
+      "[INFO] DJF P1–2 target 일수: 324\n",
+      "[INFO] DJF P5–6 target 일수: 724\n",
+      "[HIGH] DJF: threshold=76.5,  P1–2 high 40/324 (12.3%),  P5–6 high 113/724 (15.6%)\n",
+      "[SAVE] PM10_분포확인\\PM10_hist_DJF_lag6to10.png\n",
+      "\n",
+      "===== MAM =====\n",
+      "[INFO] MAM 전체 일수: 2024\n",
+      "[INFO] MAM P1–2 target 일수: 583\n",
+      "[INFO] MAM P5–6 target 일수: 468\n",
+      "[HIGH] MAM: threshold=93.8,  P1–2 high 47/583 (8.1%),  P5–6 high 41/468 (8.8%)\n",
+      "[SAVE] PM10_분포확인\\PM10_hist_MAM_lag6to10.png\n",
+      "\n",
+      "===== JJA =====\n",
+      "[INFO] JJA 전체 일수: 2024\n",
+      "[INFO] JJA P1–2 target 일수: 853\n",
+      "[INFO] JJA P5–6 target 일수: 355\n",
+      "[HIGH] JJA: threshold=54.7,  P1–2 high 116/853 (13.6%),  P5–6 high 34/355 (9.6%)\n",
+      "[SAVE] PM10_분포확인\\PM10_hist_JJA_lag6to10.png\n",
+      "\n",
+      "===== SON =====\n",
+      "[INFO] SON 전체 일수: 2002\n",
+      "[INFO] SON P1–2 target 일수: 462\n",
+      "[INFO] SON P5–6 target 일수: 563\n",
+      "[HIGH] SON: threshold=60.9,  P1–2 high 62/462 (13.4%),  P5–6 high 98/563 (17.4%)\n",
+      "[SAVE] PM10_분포확인\\PM10_hist_SON_lag6to10.png\n"
+     ]
+    }
+   ],
    "source": [
     "PMCOL   = \"일 미세먼지 농도(㎍/㎥)\"\n",
     "DATECOL = \"일시\"\n",
@@ -475,9 +432,7 @@
     "          f\"P1–2 high {cnt_blue_high}/{len(blue_vals)} ({ratio_blue:.1f}%),  \"\n",
     "          f\"P5–6 high {cnt_red_high}/{len(red_vals)} ({ratio_red:.1f}%)\")\n",
     "\n",
-    "    # --------------------------------------\n",
-    "    # 그림\n",
-    "    # --------------------------------------\n",
+    "\n",
     "    fig, axes = plt.subplots(2, 1, figsize=(10, 10))\n",
     "\n",
     "    # (1) 위: 전체 분포 + GEV\n",
@@ -510,7 +465,7 @@
     "    ax1.set_xlabel(r\"PM$_{10}$ ($\\mu$g m$^{-3}$)\")\n",
     "    ax1.set_ylabel(\"Frequency\")\n",
     "\n",
-    "    # (2) 아래: P1–2 vs P5–6 (반투명 hist + 굵은 윤곽)\n",
+    "    # P1–2 vs P5–6 (반투명 hist + 굵은 윤곽)\n",
     "    ax2 = axes[1]\n",
     "\n",
     "    # 분포 크기에 따라 그리는 순서를 결정 (큰 분포 먼저, 작은 분포 나중)\n",
@@ -583,12 +538,20 @@
     "\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    outname = os.path.join(OUTDIR, f\"PM10_stationMean_hist_{season}_lag6to10.png\")\n",
+    "    outname = os.path.join(OUTDIR, f\"PM10_hist_{season}_lag6to10.png\")\n",
     "    plt.savefig(outname, dpi=300)\n",
     "    plt.close()\n",
     "\n",
     "    print(f\"[SAVE] {outname}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9d0456-b615-47f7-a09f-84206372d2cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
