--- a/PM10분포.ipynb
+++ b/PM10분포.ipynb
@@ -25,8 +25,8 @@
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.ticker as mticker\n",
     "# matplotlib에 한글 폰트 설정\n",
-    "rcParams[\"font.family\"] = \"Malgun Gothic\"  # 윈도우용, 맥/리눅스는 밑 참고\n",
-    "rcParams[\"axes.unicode_minus\"] = False     # 마이너스 기호 깨짐 방지"
+    "rcParams[\"font.family\"] = \"Malgun Gothic\"  
+    "rcParams[\"axes.unicode_minus\"] = False    
    ]
   },
   {
