--- a/PM10분포.ipynb
+++ b/PM10분포.ipynb
@@ -25,8 +25,8 @@
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.ticker as mticker\n",
     "# matplotlib에 한글 폰트 설정\n",
-    "rcParams[\"font.family\"] = \"Malgun Gothic\"  
-    "rcParams[\"axes.unicode_minus\"] = False    
+    "rcParams[\"font.family\"] = \"Malgun Gothic\"  \n",
+    "rcParams[\"axes.unicode_minus\"] = False     "
    ]
   },
   {
